# krunch

./: .gitignore  README.md
lab1/: README.md
lab1/in-lab/: README.md  autograde.py  disk.py  test.py
lab1/take-home/: README.md  autograde.py  disk.py  question.md  test.py
lab2/: .gitignore
lab2/in-lab/: CMakeLists.txt  README.md  ls.cpp  ls.h  ls_test.cpp
lab2/take-home/: CMakeLists.txt  README.md  ls.cpp  ls.h  ls_test.cpp
lab3/: .gitignore
lab3/in-lab/: CMakeLists.txt  README.md  myfs.cpp  params.h  test.py
lab3/take-home/: CMakeLists.txt  README.md  myfs.cpp  test.py
lab4/: README.md
lab4/in-lab/: README.md  pom.xml
lab4/in-lab/src/main/java/app/: Card.java  CardStreamProcessor.java
lab4/in-lab/src/main/resources/: streams.properties
lab4/in-lab/src/test/java/app/: CardStreamProcessorTest.java
lab4/take-home/: README.md  pom.xml
lab4/take-home/src/main/java/app/: Card.java  MultiThreadedCardProducer.java  SimpleCardConsumer.java  SimpleCardProducer.java
lab4/take-home/src/main/resources/: consumer.properties
lab4/take-home/src/test/java/app/: CardConsumerTest.java  CardProducerTest.java
lab5/: README.md
utils/: convert.py
